修改文件上传的方式

--- a/GMMS/Areas/User/Views/Drawing/DrawingDetail.cshtml
+++ b/GMMS/Areas/User/Views/Drawing/DrawingDetail.cshtml
@@ -82,7 +82,7 @@
             //选完文件后不自动上传
             upload.render({
                 elem: '#test8'
-                , url: "@Url.Action("UploadController/FilesUpload")" //改成您自己的上传接口
+                , url: "@Url.Action("FilesUpload","Upload")" //改成您自己的上传接口
                 , auto: false
                 //,multiple: true
                 , bindAction: '#test9'
