预览实现，文件上传优化

--- a/GMMS/Views/Home/Download.cshtml
+++ b/GMMS/Views/Home/Download.cshtml
@@ -12,6 +12,7 @@
     <p align="center">
 
         <object classid="clsid:74A777F8-7A8F-4e7c-AF47-7074828086E2" id="MxDrawXCtrl" codebase="http://www.mxdraw.com/MxDrawX52.CAB#version=7.0.0.1" width=100% height=90%>
+            <param name="DwgFilePath" value="G:\毕设\其他资料\GMMS\GMMS\GMMS\/images/8煤底板等高线及资源储量估算图g.dwg">
             <param name="_Version" value="65536">
             <param name="_ExtentX" value="24262">
             <param name="_ExtentY" value="16219">
