--- a/GMMS/Views/Shared/AdminLayout.cshtml
+++ b/GMMS/Views/Shared/AdminLayout.cshtml
@@ -44,25 +44,9 @@
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item layui-nav-itemed">
-                        <a class="" href="~/User/Drawing/DrawingView">图件管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">列表一</a></dd>
-                            <dd><a href="javascript:;">列表二</a></dd>
-                            <dd><a href="javascript:;">列表三</a></dd>
-                            <dd><a href="">超链接</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="~/User/UserManage/UserView">用户管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">列表一</a></dd>
-                            <dd><a href="javascript:;">列表二</a></dd>
-                            <dd><a href="">超链接</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item"><a href="~/User/UserManage/UserView">云市场</a></li>
-                    <li class="layui-nav-item"><a href="">发布商品</a></li>
+                    
+                    <li class="layui-nav-item"><a href="~/User/UserManage/UserView">用户管理</a></li>
+                    <li class="layui-nav-item"><a href="~/User/Drawing/DrawingView">图件管理</a></li>
                 </ul>
             </div>
         </div>
@@ -89,7 +73,7 @@
         </div>
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © layui.com - 底部固定区域
+            © 地质图件管理系统
         </div>
     </div>
     @Scripts.Render("~/bundles/layui")
