--- a/GMMS/Areas/User/Views/UserManage/UserView.cshtml
+++ b/GMMS/Areas/User/Views/UserManage/UserView.cshtml
@@ -49,7 +49,7 @@
                     },
                     { field: 'User_name', title: '用户名', width: 150, sort: true },
                     { field: 'User_realname', title: '真实姓名', width: 150, sort: true },
-                    //{ field: 'UpdataTime', title: '修改时间', width: 200, sort: true },
+                    { field: 'UpdataTime', title: '修改时间', width: 200, sort: true },
                     { title: '操作', width: 150, toolbar:"#tbar" }
                 ]]
            });
@@ -67,7 +67,7 @@
                    title: "添加用户",
                    area: ["700px", "450px"],
                    end: function () { // layui 关闭弹框时的回调函数
-                       $("#refresh").click();
+                       $("#search").click();
                    }
                })
            })
@@ -93,7 +93,7 @@
                         },
                         success: function (result) {
                             if (result.Success == true) {
-                                $("#refresh").click();
+                                $("#search").click();
                                 layer.msg(result.Message, { icon: 1 });
                             }
                             else
@@ -114,7 +114,7 @@
                             title: "修改用户",
                         area: ["700px", "450px"],
                         end: function () { // layui 关闭弹框时的回调函数
-                            $("#refresh").click();
+                            $("#search").click();
                         }
 
                 })
