--- a/GMMS/Areas/User/Views/UserManage/UserView.cshtml
+++ b/GMMS/Areas/User/Views/UserManage/UserView.cshtml
@@ -49,7 +49,7 @@
                     },
                     { field: 'User_name', title: '用户名', width: 150, sort: true },
                     { field: 'User_realname', title: '真实姓名', width: 150, sort: true },
-                    { field: 'UpdataTime', title: '修改时间', width: 200, sort: true },
+                    //{ field: 'UpdataTime', title: '修改时间', width: 200, sort: true },
                     { title: '操作', width: 150, toolbar:"#tbar" }
                 ]]
            });
